Renamed project and reset version
- Updated the project's name to better reflect its functionality as a date range picker.
- Reset the version number to 0.0.1 to signify a fresh start under the new name.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "angular-react-dates",
-  "version": "0.0.4",
+  "name": "angular-react-date-range",
+  "version": "0.0.1",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
